<resources>
    <string name="app_name">News Browser</string>
    <string name="title_activity_articles">ArticlesActivity</string>
    <string name="action_search">action_search</string>
    <string name="queryHint"> Entrez votre recherche </string>
    <string name="buttonText">Rechercher</string>
    <string name="country_item">Pays</string>
    <string name="category_item">Catégories</string>

    <string-array name="language_array">
        <item name="de">de</item>
        <item name="en">en</item>
        <item name="fr">fr</item>
        <item name="it">it</item>
    </string-array>

    <string-array name="category_array">
        <item name="business">Économie</item>
        <item name="entertainment">Divertissement</item>
        <item name="general">Général</item>
        <item name="health">Santé</item>
        <item name="science">Science</item>
        <item name="sports">Sports</item>
        <item name="technology">Technologie</item>
    </string-array>

    <string-array name="pageSize_array">
        <item name="pageSize20">20</item>
        <item name="pageSize50">50</item>
        <item name="pageSize80">80</item>
        <item name="pageSize100">100</item>
    </string-array>

    <string-array name="sortBy_array">
        <item name="relevancy">Pertinence</item>
        <item name="popularity">Popularité</item>
        <item name="publishedAt">Date</item>
    </string-array>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="country_text">Pays :</string>
    <string name="category_text">Catégorie :</string>
    <string name="pageSize_text">Nombre d\'articles :</string>
    <string name="valid_button">Valider</string>
    <string name="sortBy_text">Trier par :</string>
    <string name="save_text">Sauvegarder</string>
    <string name="comment_text">Laisser un avis</string>
    <string name="from_text">Du</string>
    <string name="to_text">Au</string>
    <string name="pick_date">Date de début</string>
    <string name="pick_date_from">Du</string>
    <string name="pick_date_to">Au</string>
    <string name="date_picker_text">N\'afficher que les articles :</string>
    <string name="from_date_choosen"></string>
    <string name="to_date_choosen"></string>
    <string name="delete_text">Supprimer</string>
    <string name="seeComments_text">Commentaires</string>
    <string name="saved_text">Sauvegardé</string>
    <string name="unknow_author">Inconnu</string>
    <string name="cancel_delete_text">Annuler la suppression</string>
    <string name="exit_application">Cliquer encore pour quitter l\'application</string>
    <string name="seeComment_text">Avis</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="valid_text">Valider</string>
    <string name="cancel_text">Annuler</string>
    <string name="see_comment">Voir mon avis</string>
    <string name="delete_comment_text">Commentaire supprimé</string>
    <string name="empty_query">Aucun mot-clé renseigné</string>
    <string name="info">Développé par HUYNH-PHUC Axel</string>
    <string name="incorrect_date_choice">Choix des dates incorrect</string>
    <string name="empty_list">Aucun article ne correspond à votre recherche</string>
    <string name="empty_saved_text">Aucun article sauvegardé</string>
    <string name="empty_history">Historique vide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_text">Chargement de la page...</string>
    <string name="exit_message">Voulez vous vraiment quitter l\'application ?</string>
    <string name="exit_title_message">Quitter l\'application ?</string>
    <string name="default_settings_text">Paramètres par défaut</string>
    <string name="root_title">Paramètres</string>
    <string name="mode_preference">Choix du mode</string>
    <string name="summary_mode_preference">Choisissez ce mode pour voir les meilleures news récentes</string>
    <string name="title_mode_preference">Top news</string>
    <string name="title_country_list">Choix du pays</string>
    <string name="title_language_list">Pays</string>
    <string name="dialog_title_language_list">Choix du pays : </string>
    <string name="title_articles_number_list">Nombre d\'articles</string>
    <string name="title_pageSize_list">Nombre d\'articles</string>
    <string name="dialog_pageSize_list">Choix du nombre d\'articles : </string>
    <string name="title_sortBy_list">Tri des articles</string>
    <string name="dialog_sortBy_list">Trier par : </string>
    <string name="pref_select_from_date">Date de début</string>
    <string name="pref_date_choice">Choix des dates</string>
    <string name="pref_select_to_date">Date de fin</string>
    <string name="from_date_summary" />
    <string name="to_date_summary" />
    <string name="comment_fragment_title">Votre avis :</string>
    <string name="save_toast">Article sauvegardé</string>

</resources>
